--- a/.github/workflows/test-chart.yaml
+++ b/.github/workflows/test-chart.yaml
@@ -248,8 +248,7 @@ jobs:
       # reach the ACME client in our autohttps pod.
       - name: Install local ACME server
         run: |
-          git clone -b openssl https://github.com/manics/pebble-helm-chart.git
-          helm install pebble ./pebble-helm-chart/pebble --values dev-config-pebble.yaml
+          helm install pebble --repo https://hub.jupyter.org/helm-chart/ pebble --values dev-config-pebble.yaml
 
       # Build our images if needed and update values.yaml with the tags
       - name: Install and run chartpress
