--- a/tools/templates/lint-and-validate-values.yaml
+++ b/tools/templates/lint-and-validate-values.yaml
@@ -574,6 +574,7 @@ prePuller:
     mockImage2:
       name: mock-user/mock-image2
       tag: mock-tag
+      pullPolicy: Always
 
 ingress:
   enabled: true
