--- a/tools/templates/lint-and-validate-values.yaml
+++ b/tools/templates/lint-and-validate-values.yaml
@@ -580,7 +580,7 @@ ingress:
   enabled: true
   annotations: *annotations
   ingressClassName: mock-ingress-class-name
-  hosts:
+  hosts: &ingress-hosts
     - mocked1.domain.name
     - mocked2.domain.name
   pathSuffix: dummy-pathSuffix
@@ -605,6 +605,16 @@ ingress:
       hosts:
         - mocked1.domain.name
         - mocked2.domain.name
+
+httpRoute:
+  # enabled set to false while awaiting HTTPRoute becoming available by default
+  # in our testing infra
+  enabled: false
+  annotations: *annotations
+  hostnames: *ingress-hosts
+  gateway:
+    name: gateway-name
+    namespace: gateway-namespace
 
 cull:
   enabled: true
