--- a/.github/workflows/vuln-scan.yaml
+++ b/.github/workflows/vuln-scan.yaml
@@ -77,6 +77,9 @@ jobs:
           )
           echo "Identified image: $IMAGE_SPEC"
 
+          # FIXME: Remove this temp hardcoding to help test
+          IMAGE_SPEC=quay.io/jupyterhub/k8s-hub:4.2.1-0.dev.git.7014.hc8959795
+
           echo "spec=$IMAGE_SPEC" >> $GITHUB_OUTPUT
           echo "name=$(echo $IMAGE_SPEC | sed 's/\(.*\):.*/\1/')" >> $GITHUB_OUTPUT
           echo "tag=$(echo $IMAGE_SPEC | sed 's/.*:\(.*\)/\1/')" >> $GITHUB_OUTPUT
